style.css
/* General styling */
html {
	height: 100%;
}

body {
	font-family: "Segoe UI", Arial, sans-serif;
	color: rgb(51, 51, 51);
	min-height: 100%;
}

.flex {
	display: flex;
}

a:visited {
	color: inherit;
}

/* Animations */
@keyframes fadeInUp {
	0% {
		transform: translateY(10%);
		opacity: 0;
	}

	100% {
		transform: translateY(0%);
		opacity: 1;
	}
}

.fadeInUp-animation {
	animation: 1.5s fadeInUp;
}

/* Left side hero */
::backdrop {
	background-color: rgba(0, 0, 0, 0.418);
}

.hero {
	width: 50%;
	flex-direction: column;
	align-items: center;

	background-image: url(img/bg.jpg);
	background-position: 40% 66%;
	background-repeat: no-repeat;

	color: rgb(255, 255, 255);
	text-align: center;
}

.branding {
	height: 60px;
	margin-top: 18%;
	gap: 1.5rem;
	justify-content: center;
	align-items: center;
	flex-direction: row;
}

.hero img {
	filter: saturate(0.9);
	height: 100%;
	filter: drop-shadow(0 1px 2px rgba(0, 0, 0, 0.35));
}

.hero h1 {
	font-size: 3rem;
	font-weight: 700;
	text-shadow: 0 3px 5px rgba(0, 0, 0, 0.35);
}

.shelf {
	display: grid;
	gap: 1rem;
	width: 83%;

	/* Scuffed fix alert (idk D: ) */
	margin-right: 2rem;
}

.header {
	margin-top: 2rem;
	justify-content: center;
	padding: 0.7rem 1rem;
	color: black;
}

.header * {
	font-weight: 700;
	color: rgb(54, 54, 54);
	flex: 1;
}

.card {
	display: flex;
	width: 100%;
	justify-content: center;
	background-color: rgba(255, 255, 255, 0.699);
	padding: 1rem;
	border-radius: 0.3rem;
	box-shadow: 0 3px 5px rgba(0, 0, 0, 0.205);

	color: rgb(63, 63, 63);
	word-wrap: break-word;
}

.card:not(.header):hover {
	cursor: pointer;
}

.card li,
.card ul {
	flex: 1;
}

.card ul {
	display: flex;
	gap: 3rem;
}

.photo-credit {
	margin-top: auto;
	margin: 1rem 0;
}

.photo-credit,
.photo-credit>* {
	font-size: 0.75rem;
	color: rgba(255, 255, 255, 0.664);
}

/* Right side hero */
.form-bg {
	flex: 1;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	gap: 1.5rem;

	background-color: rgb(235, 235, 235);
	box-shadow: -5px 0 10px rgba(0, 0, 0, 0.13);
	z-index: 1;
}

.form-card {
	width: 50%;
	background-color: white;
	border-radius: 2%;
	box-shadow: 0 3px 10px rgba(0, 0, 0, 0.205);

	padding: 5rem 5rem;
}

/* form */
.form-card,
.form-card ul,
.form-card li {
	display: flex;
	flex-direction: column;
}

.form-card>h1 {
	font-size: 2.5rem;
	font-weight: 700;
	margin-bottom: 1.5rem;
}

.form-card ul {
	gap: 1.25rem;
}

.form-card label {
	font-weight: 600;
	padding-bottom: 0.7rem;
	color: rgb(61, 61, 61);
}

.form-card input,
.form-card button {
	border-radius: 0.4rem;
}

.form-card input {
	font-size: 0.9rem;
	padding: 0.5rem;
	border: 1px solid rgba(0, 0, 0, 0.205);
}


.form-card .read-li {
	flex-direction: row;
	justify-items: start;
	align-items: center;
}

.read-li>label,
#read {
	margin: 0;
	padding: 0;
}

#read {
	margin-top: 3px;
	margin-left: 15px;
}

.form-card input:indeterminate {
	border: 1px solid rgba(0, 0, 0, 0.205);
}

.form-card button[type="submit"]:hover,
.form-card button[type="submit"]:active,
.form-card input:focus {
	transition: all 0.25s ease;
}

.form-card input:focus {
	box-shadow: 0 5px 7px rgba(0, 0, 0, 0.205);
	outline-color: rgb(0, 124, 207);
}

.form-card button[type="submit"] {
	color: white;
	background-color: rgb(0, 124, 207);
	border: none;
	width: 100%;
	padding: 1rem 3rem;
}

.form-card button[type="submit"]:hover {
	cursor: pointer;
	background-color: rgb(20, 133, 209);
	box-shadow: 0 3px 7px rgba(0, 0, 0, 0.205);
}

.form-card button[type="submit"]:active,
.form-card .login:active {
	filter: brightness(108%);
}

.form-card .login:hover {
	text-shadow: 0 2px 3px rgba(0, 0, 0, 0.068);
}

/* Footer */
footer {
	margin-top: 1rem;
}

footer * {
	color: rgba(0, 0, 0, 0.534);
}

/* Media query */
@media (max-width: 900px) {
	body {
		flex-direction: column;
	}

	.hero {
		width: 100%;
		min-height: 50svh;
	}

	.hero>h1 {
		margin-top: 7%;
	}

	.form-card {
		align-items: center;
		padding: 3rem 3rem;
		width: 100%;
		animation: none;
	}

	.form-card h1,
	.form-card form {
		animation: 1.5s fadeInUp;
	}

	.form-card ul {
		align-items: center;
		width: 90svw;
	}

	.form-card li {
		flex-direction: row;
		align-items: center;
	}


	.form-card label {
		padding: 0;
		margin-right: 1rem;
	}

	.form-card input {
		width: 50svw;
	}

	footer {
		padding-bottom: 2rem;
	}

}

